--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           context: .
           push: true 
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/pruebaexamen:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/appdevops:latest
 
   aws:
     name: Deploy image to aws
